--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,9 @@ h2 {
 }
 
 .row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     width: auto;
     max-width: 1000px;
     text-align: center;
@@ -74,7 +77,7 @@ h2 {
     box-shadow: 1px 5px 10px #80704A;
 }
 
-div img {
+.child-row {
     border-radius: 10px;
     border-style: solid;
     border-color: #FFE194;
